<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/fondo_rejilla"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/texto_estado_sistema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estado: Desconocido"
        tools:text="Estado: Desconocido" />

    <TextView
        android:id="@+id/texto_conexion_ws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WS: Conectando..." />

    <ImageView
        android:id="@+id/icono_central"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/icono_central_description"
        android:src="@drawable/icono_01"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_top_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_ir_acceso"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/green"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/boton_acceso"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:cornerRadius="500dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_modo_taller"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/boton_modo_taller"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:cornerRadius="500dp"
        app:layout_constraintTop_toBottomOf="@+id/boton_ir_acceso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>